# pittacus

./: CMakeLists.txt  README.md  config.c  config.h  gossip.c  gossip.h  main.c  member.c  member.h  messages.c  messages.h  network.c  network.h  utils.c  utils.h  vector_clock.c  vector_clock.h
demos/: CMakeLists.txt  demo_node.c  demo_seed_node.c
src/: CMakeLists.txt  config.c  config.h  errors.h  gossip.c  gossip.h  member.c  member.h  messages.c  messages.h  network.c  network.h  pittacus.h  utils.c  utils.h  vector_clock.c  vector_clock.h
test/: CMakeLists.txt  member_test.c  messages_test.c  test_utils.c  test_utils.h  vector_clock_test.c
